[package]
name = "ripemd160-attack"
version = "0.6.0"
edition = "2021"

[dependencies]
ctrlc-async = "3.2.2"
clap = "4.5.21"
rand = "0.8.5"
ripemd = "0.1.3"
generic-array = "0.14.7"
chrono = "0.4.39"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
log = "0.4.22"
env_logger = "0.11.6"
